--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"></i><a href="#">Warior<span>X</span></a></div>
+            <div class="logo"></i><a href="#">Warrior<span>X55</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
@@ -79,7 +79,10 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>My technical skills including proficiency in programming languages like Python, PHP, and JavaScript as well as node.js. I also have a strong backgroung Linux and Networks and I do problem-solving everyday. I believe my skills and experiencce align well with this role.</p>
+                    <p>My technical skills including both web development and hacking skills. For instance, I first started with web design
+                    and I've learn HTML & CSS and JavaScript but I don't delve much deeper in it because I want to get into hacking process
+                    and I really love it and I become like a maniac all the time I was learning about new tools and techniques. Then I've mastered
+                    Bash scripting and Python and now I'm looking for bug in websites as a Bug Bounty Hunting and reporting them eventually.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -326,8 +329,11 @@
                     <img src="images/profile-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm WariorX and I'm an <span class="typing-2"></span></div>
-                    <p>Hacker and penatration tester and a member in anonymous organization group. I trained myself to have deep anderstanding hacking operations especially systems and Networks because all the hacks always came when you get into a Network that's why choose to understand part thoroughly and other things I get it as well.</p>
+                    <div class="text">I'm WarriorX55 and I'm a <span class="typing-2"></span></div>
+                    <p>Hacker and penatration tester and I'm training myself to be able to find bug and security flaws in websites as Bug Bounty Hunting
+                    my jop is to find bugs and reporting them to get paid you can say I'm a White Hat hacker because in all my life I really want to be 
+                    like all those sophisticated hackers and I'm really gateful that Lam one of them. But that doesn't mean that I'm safe because CyberWar
+                    is increacing more and more and I have to up my game to be able to defend it.</p>
                     <a href="pdf/My CV-Resume.docx">Download CV</a>
                 </div>
                 <div class="media-icons">
