--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     </section>
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">WariorX</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="#">WarriorX55</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
 
     </footer>
     <script src="script.js"></script>
