--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- home section start -->
     <section class="main" id="home">
         <div>
-            <h2>Hello, I'm WariorX<br><span>Ethical Hacker & Penatration Tester</span></h2>
+            <h2>Hello, I'm WarriorX55<br><span>Ethical Hacker & Penatration Tester</span></h2>
             <h3>I prepare myself to have positive influence on the world.</h3>
             <a href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
