--- a/index.html
+++ b/index.html
@@ -151,6 +151,50 @@
                 </strong>
             </div>
         </div>
+                <div class="project-card">
+            <div class="project-image">
+                <img src="images/template-1.jpg">
+            </div>
+            <div class="project-info">
+                <h1 class="project-category">responsive website template using html and css</h1>
+                <strong class="project-title">
+                    <span>Template website</span><a href="Template_One/index.html" class="more-details">See The Page</a>
+                </strong>
+            </div>
+        </div>
+                <div class="project-card">
+            <div class="project-image">
+                <img src="images/template-2.jpg">
+            </div>
+            <div class="project-info">
+                <h1 class="project-category">responsive website template using html and css</h1>
+                <strong class="project-title">
+                    <span>Website Template</span><a href="Template_Two/index.html" class="more-details">See The Page</a>
+                </strong>
+            </div>
+        </div>
+                <div class="project-card">
+            <div class="project-image">
+                <img src="images/template-3.jpg">
+            </div>
+            <div class="project-info">
+                <h1 class="project-category">responsive website template using html and css</h1>
+                <strong class="project-title">
+                    <span>Website Template</span><a href="Template_Three/index.html" class="more-details">See The Page</a>
+                </strong>
+            </div>
+        </div>
+                <div class="project-card">
+            <div class="project-image">
+                <img src="images/template-4.jpg">
+            </div>
+            <div class="project-info">
+                <h1 class="project-category">responsive website template using html and css</h1>
+                <strong class="project-title">
+                    <span>Website Template</span><a href="Template_Four/index.html" class="more-details">See The Page</a>
+                </strong>
+            </div>
+        </div>
         <div class="project-card">
             <div class="project-image">
                 <img src="images/page-3.jpg">
@@ -236,17 +280,6 @@
                 <h1 class="project-category">Build animated website using html, css and JavaScript</h1>
                 <strong class="project-title">
                     <span>Animated Website</span><a href="AI Technology/index.html" class="more-details">See The Page</a>
-                </strong>
-            </div>
-        </div>
-        <div class="project-card">
-            <div class="project-image">
-                <img src="images/page-11.jpg">
-            </div>
-            <div class="project-info">
-                <h1 class="project-category">Create Avatar website using html and css only</h1>
-                <strong class="project-title">
-                    <span>Avatar Website</span><a href="Avatar website/index.html" class="more-details">See The Page</a>
                 </strong>
             </div>
         </div>
