--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     my jop is to find bugs and reporting them to get paid you can say I'm a White Hat hacker because in all my life I really want to be 
                     like all those sophisticated hackers and I'm really gateful that Lam one of them. But that doesn't mean that I'm safe because CyberWar
                     is increacing more and more and I have to up my game to be able to defend it.</p>
-                    <a href="pdf/My CV-Resume.docx">Download CV</a>
+                    <a href="#">Download CV</a>
                 </div>
                 <div class="media-icons">
                     <a href="https://github.com/"><i class="fab fa-github"></i></a>
